Created new backend server with golang and added basic start

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 node_modules/*
 node_modules
 .env
+
+./web-maker/.env
+./web-maker-sever/.env
+./web-maker/node_modules/*
+./web-maker/node_modules
