--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,4 @@ node_modules
 ./web-maker-sever/.env
 ./web-maker/node_modules/*
 ./web-maker/node_modules
-./web-maker/build
-./web-maker/build/*
+./web-maker/public/*
