--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ node_modules
 ./web-maker/node_modules/*
 ./web-maker/node_modules
 ./web-maker/public/*
+./web-maker/build/
+./web-maker/build/*
+./web-maker/build
