Cleaned the code and fixed a bug with images and the new modaleditplacement

--- a/web-maker/package.json
+++ b/web-maker/package.json
@@ -1,7 +1,7 @@
 {
   "name": "web-maker",
   "version": "0.1.0",
-  "homepage": "http://localhost/web-maker",
+  "homepage": "./",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
