--- a/web-maker/.prettierrc
+++ b/web-maker/.prettierrc
@@ -1,11 +1,4 @@
 {
-  "printWidth": 80,
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": false,
-  "singleQuote": false,
-  "trailingComma": "all",
-  "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "proseWrap": "always"
+  "printWidth": 100,
+  "singleQuote": true
 }
