--- a/web-maker/package.json
+++ b/web-maker/package.json
@@ -26,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "pretty-quick": "pretty-quick"
   },
   "browserslist": {
     "production": [
@@ -51,13 +52,13 @@
     }
   },
   "devDependencies": {
-    "prettier": "2.1.2",
-    "pretty-quick": "^3.1.0",
-    "eslint": "^7.11.0",
     "@babel/core": "^7.12.3",
     "@babel/plugin-transform-runtime": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "babel-eslint": "^10.1.0",
-    "babelify": "^10.0.0"
+    "babelify": "^10.0.0",
+    "eslint": "^7.11.0",
+    "prettier": "^2.1.2",
+    "pretty-quick": "^3.1.0"
   }
 }
