final change to everything that has to do with linting and formating and git hooks

--- a/web-maker/package.json
+++ b/web-maker/package.json
@@ -41,9 +41,10 @@
       "last 1 safari version"
     ]
   },
-  "eslintconfig": {
+  "eslintConfig": {
     "extends": [
-      "./node_modules/cod-scripts/eslint.js"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "husky": {
