Moved files in more apropiated folders and passed js files to ts files

--- a/web-maker/.prettierrc
+++ b/web-maker/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "tabWidth": 2,
-  "useTabs": false,
-  "htmlWhitespaceSensitivity": "ignore",
-  "semi": false
+	"tabWidth": 2,
+	"useTabs": true,
+	"htmlWhitespaceSensitivity": "ignore",
+	"semi": false,
+	"jsxBracketSameLine": true
 }
