--- a/web-maker/.vscode/settings.json
+++ b/web-maker/.vscode/settings.json
@@ -1,12 +1,12 @@
 {
-  "editor.formatOnSave": true,
-  "[javascript]": {
-    "editor.formatOnSave": false
-  },
-  "eslint.autoFixOnSave": true,
-  "eslint.alwaysShowStatus": true,
-  "editor.tabSize": 2,
-  "files.associations": {
-    "*.js": "javascriptreact"
-  }
+	// "editor.formatOnSave": true,
+	// "[javascript]": {
+	// "editor.formatOnSave": false
+	// },
+	// "eslint.autoFixOnSave": true,
+	// "eslint.alwaysShowStatus": true,
+	"editor.tabSize": 2,
+	"files.associations": {
+		"*.js": "javascriptreact"
+	}
 }
